tests/checker/diagnostics/0354_labels_wrong_y_type_03.ml.infer.expected
File "0354_labels_wrong_y_type_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0354_labels_wrong_y_type_03 is not a valid module name.

File "0354_labels_wrong_y_type_03.ml", line 2, characters 27-28:
2 | let _ = pick_gamma ~x:2 ~y:3
                               ^
Error: The constant 3 has type int but an expression was expected of type
         bool
